// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatMessage /> renders correctly message 1`] = `
<div
  className="ChatMessage-messageWrapper-76 ChatMessage-messageWrapperFromMe-77"
>
  <div
    className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
    style={
      Object {
        "backgroundColor": "#8bc34a",
      }
    }
  >
    T
  </div>
  <div
    className="MuiPaper-root-89 MuiPaper-elevation2-93 MuiPaper-rounded-90 ChatMessage-message-78 ChatMessage-messageFromMe-79"
  >
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126"
      style={
        Object {
          "color": "#8bc34a",
        }
      }
    >
      test
    </span>
    <pre
      className="MuiTypography-root-116 MuiTypography-body1-125 ChatMessage-content-82"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126 ChatMessage-time-83"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders message from other users 1`] = `
<div
  className="ChatMessage-messageWrapper-76"
>
  <div
    className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    S
  </div>
  <div
    className="MuiPaper-root-89 MuiPaper-elevation2-93 MuiPaper-rounded-90 ChatMessage-message-78"
  >
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      someone
    </span>
    <pre
      className="MuiTypography-root-116 MuiTypography-body1-125 ChatMessage-content-82"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126 ChatMessage-time-83"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name in status message correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-76"
>
  <div
    className="ChatMessage-statusMessage-80"
  >
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126 ChatMessage-statusMessageUser-81"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    test message
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126"
    >
      2 days ago
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name of other users correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-76"
>
  <div
    className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-89 MuiPaper-elevation2-93 MuiPaper-rounded-90 ChatMessage-message-78"
  >
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    <pre
      className="MuiTypography-root-116 MuiTypography-body1-125 ChatMessage-content-82"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126 ChatMessage-time-83"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name of user correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-76"
>
  <div
    className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-89 MuiPaper-elevation2-93 MuiPaper-rounded-90 ChatMessage-message-78"
  >
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    <pre
      className="MuiTypography-root-116 MuiTypography-body1-125 ChatMessage-content-82"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126 ChatMessage-time-83"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders status message 1`] = `
<div
  className="ChatMessage-messageWrapper-76"
>
  <div
    className="ChatMessage-statusMessage-80"
  >
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126 ChatMessage-statusMessageUser-81"
      style={
        Object {
          "color": "#8bc34a",
        }
      }
    >
      test
    </span>
    test message
    <span
      className="MuiTypography-root-116 MuiTypography-caption-126"
    >
      2 days ago
    </span>
  </div>
</div>
`;
